# tap-sendgrid

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  pyproject.toml  setup.cfg  setup.py
tap_sendgrid/: __init__.py  context.py  http.py  streams.py  syncs.py  utils.py
tap_sendgrid/schemas/: bounces.json  campaigns.json  groups_all.json  invalids.json  lists_all.json  segments_all.json  single_sends.json  spam_reports.json  templates_all.json
